# AcademyPlusMoldova-42.fr

./: .gitignore  id_rsa  lfs_mnt.sh  tests
C++/lab 3/: Source2.cpp
fillit/: CMakeLists.txt  Makefile  a.out  fillit.h  main.c  solve.c
fillit/includes/libft/: Makefile  ft_bzero.c  ft_isalpha.c  ft_isprint.c  ft_lstfree.c  ft_lstiter.c  ft_lstrevers.c  ft_memcpy.c  ft_memdel.c  ft_print_bits.c  ft_putchar.c  ft_strcmp.c  ft_strlcpy.c  ft_strlowcase.c  ft_strnstr.c  ft_strsplit.c  ft_strtrim.c  ft_swap.c  libft.h
fillit/libft/: Makefile  ft_count_digit.c  ft_isdigit.c  ft_lstadd.c  ft_lstmap.c  ft_lstnew.c  ft_memcmp.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_strchr.c  ft_strclr.c  ft_strcpy.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncpy.c  ft_strnew.c  ft_strstr.c  ft_strupcase.c  ft_tolower.c  libft.h  libft.h.gch
fillit/scr/: addition.c  fillit.h  main.c  solve.c
fillit/src/: addition.c  fillit.h  main.c  solve.c
fillit/test/: 11.fillit
ft/: ._normeerror.rtf  make_error  normeerror.rtf  test_libft_partie_2.c
ft/libft/: .Makefile.swp  Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_count_digit.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_ispunct.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_print_bits.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_str_is_printable.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+30 more)
get_next_line/: .get_next_line.c.swp  author  get_next_line.c  get_next_line.h
libft/: Makefile  ft_isascii.c  ft_itoa_base.c  ft_lstdel.c  ft_lstdelone.c  ft_memmove.c  ft_memset.c  ft_reverse_bits.c  ft_striter.c  ft_strjoin.c  ft_strlcat.c  ft_strncmp.c  ft_toupper.c  libft.h
